# lattice

./: .gitignore  Cargo.toml  PRODUCT.md  README.md  TASKS.md
crates/lattice-app/: Cargo.toml
crates/lattice-app/src/: main.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: lib.rs
crates/lattice-diff/: Cargo.toml
crates/lattice-diff/src/: lib.rs
crates/lattice-editor/: Cargo.toml
crates/lattice-editor/src/: lib.rs
crates/lattice-graph/: Cargo.toml
crates/lattice-graph/src/: lib.rs
crates/lattice-history/: Cargo.toml
crates/lattice-history/src/: lib.rs
crates/lattice-markdown/: Cargo.toml
crates/lattice-markdown/src/: lib.rs
crates/lattice-ui/: Cargo.toml
crates/lattice-ui/src/: fonts.rs  lib.rs  theme.rs
crates/lattice-workspace/: Cargo.toml
crates/lattice-workspace/src/: lib.rs  search.rs
docs/: ARCHITECTURE.md  FERRITE_AUDIT.md  HISTORY_MODEL.md  ROADMAP.md  SECURITY_MODEL.md  lattice-rust-rewrite-plan-ferrite-informed-native-markdown-workspace.md
