[workspace]
members = [
    "crates/lattice-app",
    "crates/lattice-core",
    "crates/lattice-diff",
    "crates/lattice-editor",
    "crates/lattice-graph",
    "crates/lattice-history",
    "crates/lattice-markdown",
    "crates/lattice-ui",
    "crates/lattice-workspace",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/kyle/lattice"

[workspace.dependencies]
anyhow = "1"
blake3 = { version = "1", features = ["serde"] }
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
eframe = "0.34"
egui = "0.34"
env_logger = "0.11"
fuzzy-matcher = "0.3"
log = "0.4"
notify = "8"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
