[package]
name = "lattice-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
eframe.workspace = true
egui.workspace = true
env_logger.workspace = true
lattice-ui = { path = "../lattice-ui" }
lattice-workspace = { path = "../lattice-workspace" }
log.workspace = true
serde.workspace = true
toml.workspace = true
