[package]
name = "lattice-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
clap.workspace = true
directories.workspace = true
eframe.workspace = true
env_logger.workspace = true
lattice-core = { path = "../lattice-core" }
lattice-ui = { path = "../lattice-ui" }
lattice-workspace = { path = "../lattice-workspace" }
log.workspace = true
rfd.workspace = true
toml.workspace = true
