[package]
name = "lattice-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
blake3.workspace = true
clap.workspace = true
directories.workspace = true
eframe.workspace = true
env_logger.workspace = true
lattice-core = { path = "../lattice-core" }
lattice-editor = { path = "../lattice-editor" }
lattice-ui = { path = "../lattice-ui" }
lattice-workspace = { path = "../lattice-workspace" }
log.workspace = true
rfd.workspace = true
toml.workspace = true
