[package]
name = "lattice-workspace"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
camino.workspace = true
fuzzy-matcher.workspace = true
lattice-core = { path = "../lattice-core" }
log.workspace = true
notify.workspace = true
walkdir.workspace = true
